# rez-pyside2

./: CMakeLists.txt  build.sh  install.sh  package.py
